--- a/common/css/bootstrap-custom.css
+++ b/common/css/bootstrap-custom.css
@@ -1,12 +1,16 @@
 .navbar-default {
 	background-image: none;
 	background-color: #f2f2f2;	
+	border-top: 3px solid #06a6e1;
+	border-bottom: 1px solid #b4b4b4;
 }
 
 a.navbar-brand {
-	padding: 13px;
+	padding: 15px;
 }
 
 a.navbar-brand img {
-	height: 24px;
+	height: 28px;
+	margin: -4px .3em 0 0;
+	display: inline-block;
 }
