--- a/common/themes/dnn/styles/header.less
+++ b/common/themes/dnn/styles/header.less
@@ -8,7 +8,18 @@
 	.logo{
 		display: block;
 		padding: 15px 75px 15px 0;
-
+        color: #777;
+        font-size: 18px;
+        line-height: 20px;
+        
+        &:hover{
+            text-decoration: none;
+        }
+        
+        img{
+            margin-right: 5px;
+            vertical-align: calc(-37%);
+        }
 	}
 }
 	.logo-wrapper{
