DOC-9 - Continue work on DNN Theme

--- a/common/themes/dnn/static/dnn.styles.css
+++ b/common/themes/dnn/static/dnn.styles.css
@@ -151,7 +151,7 @@ h2 {
   float: none;
 }
 .footer .social-media a {
-  background-image: url(images/social-media.jpg);
+  background-image: url(social-media.jpg);
   display: block;
   height: 27px;
   width: 28px;
