--- a/common/themes/dnn/styles/footer.less
+++ b/common/themes/dnn/styles/footer.less
@@ -99,7 +99,7 @@
 		}
 
 		a{
-			background-image: url(images/social-media.jpg);
+			background-image: url(social-media.jpg);
 			display: block;
 			height:27px;
 			width: 28px;
