--- a/common/themes/dnn/styles/mixins.less
+++ b/common/themes/dnn/styles/mixins.less
@@ -7,3 +7,12 @@
 		display:table;
 	}
 }
+
+.box-shadow(@style, @c) when (iscolor(@c)) {
+  -webkit-box-shadow: @style @c;
+  box-shadow:         @style @c;
+}
+
+.box-shadow(@style, @alpha: 50%) when (isnumber(@alpha)) {
+  .box-shadow(@style, rgba(0, 0, 0, @alpha));
+}
