--- a/common/themes/dnn/styles/variables.less
+++ b/common/themes/dnn/styles/variables.less
@@ -11,5 +11,8 @@
 @green: #9daa12;
 @orange: #d48e12;
 
+@yellow: #ff0;
+    @yellow-light: lighten(@yellow, 43%);
+
 @gray-medium: #888;
 @gray-light: #f4f4f4;
