--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -391,3 +391,9 @@ li.toctree-l1{
     }
 
 }
+
+@media print {
+  .doc-nav-wrapper, .article-nav-wrapper, .header, .footer{ 
+      display:none; 
+  }
+}
