--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -109,13 +109,13 @@ li.toctree-l1{
         }
     }
     
-    >ul{
+    > ul{
         display: none;
         margin:0;
         padding: 10px 5px;
         background: white;
 
-        > li{ 
+        li{ 
             display: block;
             width: 100%;
             overflow: hidden;
@@ -132,6 +132,14 @@ li.toctree-l1{
             }
         }
     }
+}
+
+.toctree-l2 > ul {
+    padding-left: 1em;
+}
+
+.toctree-l3 {
+    border-left: 1px solid #ccc;
 }
 
 .doc-search{
@@ -183,6 +191,10 @@ li.toctree-l1{
     h2{
         padding-top: 20px;
         font-size: 22px;
+    }
+    
+    li {
+        margin-bottom: 10px;
     }
 }
 
