--- a/common/themes/dnn/styles/header.less
+++ b/common/themes/dnn/styles/header.less
@@ -139,6 +139,29 @@
 					}
 			}
 
+ul.dnn-breadcrumbs { 
+    margin: -25px 0 0 0;
+    padding: 0;
+    
+    + hr {
+        margin: 0 0 20px;
+    }
+    
+    li {
+        display: inline-block;
+        margin:0;
+    
+        a {
+            display: inline-block;
+            padding: 5px;
+            
+            &:first-child {
+                padding-left: 0
+            }
+        }
+    }
+}
+
 @media (min-width: 992px){
 	.header{
 		.logo{
